*apache-sshd-bin-0.8.0 (06 Apr 2013)

  06 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> +apache-sshd-bin-0.8.0.ebuild,
  +metadata.xml:
  initial import